# ModelHackathon

./: .config  .gitignore  LICENSE  README.md  classification.py  devenv.nix  main.py  objectdetection.py  pyproject.toml
hackathon/: augmentations.py  classification.py  config.py  dataloader.py  metrics.py  objectdetection.py  preprocessing.py  tasks.py  utils.py
