[project]
name = "modelhackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "einops>=0.8.1",
    "equimo>=0.4.0a6",
    "equinox>=0.12.1",
    "everett>=3.4.0",
    "jax>=0.6.0",
    "jaxlib>=0.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.12",
    "tensorflow>=2.17.1",
    "tensorflow-datasets>4.9.7",
    "tfds-nightly==4.9.8.dev202505240044",
    "tf2onnx>=1.16.1",
    "wandb>=0.19.10",
]

[project.optional-dependencies]
cuda = [
    "jax-cuda12-plugin[with-cuda]>=0.6.0",
]
